# oh-my-kb

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: manifest.json
assets/agents/: ai-engineer.md  architect.md  context.md  developer.md  explorer.md  qa.md  sre.md  startup-project.md  startup_project.md  tech-pm.md  tech_pm.md
assets/skills/ai-engineer/: SKILL.md
assets/skills/api-design/: SKILL.md
assets/skills/ci-cd/: SKILL.md
assets/skills/design/: SKILL.md
assets/skills/drink-context/: SKILL.md
assets/skills/environment/: SKILL.md
assets/skills/feature/: SKILL.md
assets/skills/frontend-ui/: SKILL.md
assets/skills/implement/: SKILL.md
assets/skills/manage/: SKILL.md
assets/skills/observability/: SKILL.md
assets/skills/operate/: SKILL.md
assets/skills/python/: SKILL.md
assets/skills/research/: SKILL.md
assets/skills/review/: SKILL.md
assets/skills/scribe/: SKILL.md  template.md
assets/skills/security/: SKILL.md
assets/skills/startup-project/: SKILL.md
assets/skills/test/: SKILL.md
assets/skills/typescript/: SKILL.md
assets/workflows/: create-feature.ts
docs/adr/: ADR-002-server-bound-universe.md  README.md  template.md
oh_my_harness/: __init__.py
oh_my_harness/agents/mcp/: server.py
oh_my_harness/kb/agents/: __init__.py  bootstrap.py  harness.py  hooks.py  injector.py  rules_template.md  template.py
oh_my_harness/kb/agents/pt-BR/: rules_template.md
oh_my_harness/kb/cli/: __init__.py  _deps.py  _remote.py  app.py  config.py  installer.py  lifecycle.py  paths.py  reindex.py
oh_my_harness/kb/cli/agents/: __init__.py  _ops.py
oh_my_harness/kb/cli/install/: __init__.py  wizard.py
oh_my_harness/kb/cli/resource/: __init__.py  diff_cmd.py  list_cmd.py  manifest.py  pull_cmd.py  registry.py  update_cmd.py
oh_my_harness/kb/cli/skills/: __init__.py  _ops.py
oh_my_harness/kb/cli/workflows/: __init__.py  _ops.py
oh_my_harness/kb/core/: __init__.py  note.py  serialization.py  slug.py
oh_my_harness/kb/embedding/: __init__.py  bge_m3_embedder.py
oh_my_harness/kb/infra/: docker_qdrant.py
oh_my_harness/kb/mcp/: __init__.py  config.py  resources.py  server.py
oh_my_harness/kb/mcp/skills/scribe/pt-BR/: SKILL.md  template.md
oh_my_harness/kb/mcp/tools/: __init__.py  kb_expand.py  kb_recent.py  kb_resource_diff.py  kb_resource_list.py  kb_resource_update.py  kb_search.py  kb_tree.py  kb_write.py
oh_my_harness/kb/services/: __init__.py  _payload.py  indexer.py  navigation.py  paths.py  recent.py  reindex.py  search.py  temporal.py
oh_my_harness/kb/storage/: __init__.py  qdrant_store.py
oh_my_kb/: i18n.py
oh_my_kb/agents/: __init__.py  bootstrap.py  harness.py  injector.py  template.py
oh_my_kb/agents/pt-BR/: rules_template.md
oh_my_kb/cli/: __init__.py  app.py  config.py  installer.py  lifecycle.py  paths.py  reindex.py  resource.py
oh_my_kb/cli/install/: wizard.py
oh_my_kb/cli/resource/: __init__.py  list_cmd.py  manifest.py  pull_cmd.py  registry.py
oh_my_kb/core/: __init__.py
oh_my_kb/embedding/: __init__.py  base.py  bge_m3_embedder.py
oh_my_kb/infra/: __init__.py  docker_qdrant.py
oh_my_kb/mcp/: __init__.py  config.py  resources.py  server.py
oh_my_kb/mcp/skills/scribe/: SKILL.md  template.md
oh_my_kb/mcp/skills/scribe/en-US/: template.md
oh_my_kb/mcp/skills/scribe/pt-BR/: SKILL.md  template.md
oh_my_kb/mcp/tools/: __init__.py  kb_expand.py  kb_recent.py  kb_resource_diff.py  kb_resource_list.py  kb_resource_update.py  kb_search.py  kb_tree.py  kb_write.py
oh_my_kb/services/: __init__.py  config.py  indexer.py  navigation.py  paths.py  recent.py  reindex.py  resource_ops.py  search.py  temporal.py
oh_my_kb/storage/: __init__.py  config.py  qdrant_store.py
scripts/: build_manifest.py
tests/: _helpers.py  conftest.py  test_agents_bootstrap.py  test_agents_injector.py  test_agents_mcp_placeholder.py  test_agents_mcp_server.py  test_agents_template.py  test_bge_m3_embedder.py  test_build_manifest.py  test_cli_agents.py  test_cli_bootstrap.py  test_cli_config.py  test_cli_install.py  test_cli_install_wizard.py  test_cli_kb.py  test_cli_lifecycle.py  test_cli_omk_config.py  test_cli_paths.py  test_cli_reindex.py  test_cli_resource.py  test_cli_resource_diff.py  test_cli_resource_update.py  test_cli_skills.py  test_cli_universe.py  test_cli_workflows.py  test_deps.py  test_embedder_base.py  test_i18n.py  test_indexer.py  test_indexer_integration.py  test_infra_docker_qdrant.py  test_install_session_start_hook.py  test_install_wizard_pulls_assets.py  test_mcp_config.py  test_mcp_kb_expand.py  test_mcp_kb_recent.py  test_mcp_kb_resource_diff.py  test_mcp_kb_resource_list.py  test_mcp_kb_resource_update.py  test_mcp_kb_search.py  (+22 more)
