[project]
name = "oh-my-kb"
version = "0.0.0"
description = "Programmatic, agnostic knowledge base exposed via MCP, with markdown notes indexed in Qdrant for hybrid search."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Nelson Frugeri" },
]
dependencies = [
    "FlagEmbedding>=1.3",
    "mcp>=1.0",
    "pydantic>=2.9",
    "python-frontmatter>=1.1",
    "qdrant-client>=1.12",
    "tomli-w>=1.0",
    "typer>=0.12",
]

[project.scripts]
o-kb-mcp = "oh_my_kb.mcp.server:main"
omk = "oh_my_kb.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oh_my_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: tests that load the real bge-m3 model (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "FlagEmbedding"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
follow_untyped_imports = true
