[project]
name = "oh-my-harness"
version = "0.0.0"
description = "Plataforma de tuning e personalização de harness para agentes de IA — knowledge base (o-kb-mcp) e agents (o-agents-mcp)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Nelson Frugeri" },
]
dependencies = [
    "docker>=7.1,<8.0",
    "FlagEmbedding>=1.3,<2.0",
    "mcp>=1.0,<2.0",
    "pydantic>=2.9,<3.0",
    "python-frontmatter>=1.1,<2.0",
    "qdrant-client>=1.12,<2.0",
    "rich>=13,<15",
    "tomli-w>=1.0,<2.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
omh = "oh_my_harness.kb.cli.app:app"
o-kb-mcp = "oh_my_harness.kb.mcp.server:main"
o-agents-mcp = "oh_my_harness.agents.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oh_my_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: tests that load the real bge-m3 model (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "FlagEmbedding"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true
